# starblazers

./: .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: rust.yml  ts.yml
.parcel-cache/: 26184617a56ee781-AssetGraph-0  4158a974a2078ea4-BundleGraph-0  7f973df67467291d-AssetGraph-0  d0d4aa4a0c5416be-AssetGraph-0  data.mdb  lock.mdb  requestGraph-90119cf973c747f0-0  requestGraph-dbeac9d944b7c174-0  requestGraph-nodes-0-90119cf973c747f0-0  requestGraph-nodes-0-dbeac9d944b7c174-0  snapshot-90119cf973c747f0.txt  snapshot-dbeac9d944b7c174.txt
backend/: Cargo.toml  Dockerfile  readme.md
backend/.sqlx/: query-044ae4438a2e3d4e7a577ebaed7bc6a3af77edfc25876099b938871ced393c4d.json  query-123ece0d03cfed7c6ba301e51c3c92c7b1c55aeb315c154ae5f7f15e1e992162.json  query-13bd5bac0a93dea4513f93e8fae45bbd000e07da8a5b00aafc74fa0d965893ec.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-73978bfa266e87b1825481107af0d04f5fbe5296aff6a7aa4ad38c3471391821.json  query-853a45a7d333c9314b854473213f6afaaa6affd184d492ef78594ec968303431.json  query-b7cc3b35cd345ec11478e444d701ea7fc11e736be570ff64e09ec6d8d53d0851.json  query-ffcc32663737787f969c7de2a56448fa29b0697761e85c5ba1316995950172e4.json
backend/configuration/: local.toml
backend/migrations/: 20240531153411_create_players_db.sql  20240602122730_create_user_table.sql  20240602122752_create_players_table.sql
backend/scripts/: docker_db.sh
backend/src/lib/: application.rs  claims.rs  configuration.rs  cookie.rs  filters.rs  index.rs  lib.rs  ringbuffer.rs  routes.rs  types.rs  websocket.rs
backend/src/lib/cli/: commands.rs  mod.rs
backend/src/lib/cli/commands/: executable.rs  mod_i.rs  player.rs
backend/src/lib/database/: db.rs  mod.rs  queries.rs
backend/src/lib/multiplayer/: mod.rs  multiplayer_error.rs  ringbuffer.rs
backend/src/lib/multiplayer/actors/: lobbymanager.rs  lobbyserver.rs  mod.rs  user_state_manager.rs  ws_session.rs  wslobbysession.rs
backend/src/lib/multiplayer/actors/lobby/: lobby_manager.rs
backend/src/lib/multiplayer/actors/lobby_manager/: lobbies.rs  lobby_manager.rs  mod.rs
backend/src/lib/multiplayer/communication/: common.rs  message.rs  mod.rs  player_context.rs  protocol.rs  user_state.rs
backend/tests/api/: general.rs  helloworld.rs  login.rs  main.rs  signup.rs  verify_jwt.rs
frontend/: .eslintrc  .gitignore  .prettierrc  eslintrc  index.html  package.json  readme.md  tsconfig.json
frontend/.parcel-cache/: 5350436211165b0b-BundleGraph-0  7f973df67467291d-AssetGraph-0  d0d4aa4a0c5416be-AssetGraph-0  data.mdb  lock.mdb  requestGraph-90119cf973c747f0-0  requestGraph-nodes-0-90119cf973c747f0-0  snapshot-90119cf973c747f0.txt
frontend/src/: index.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: ChatBox.tsx  ChatInput.tsx  GameCanvas.tsx
frontend/src/app/game/: page.tsx
frontend/src/app/lib/: main.ts
frontend/src/app/lib/chat/: chatbox.ts
frontend/src/scripts/: game.js  game.ts  main.js  main.ts  types.ts  websocket.ts  websocketmanager.ts
frontend/src/scripts/assets/: color.js
frontend/src/scripts/chat/: chatbox.ts  chatinput.ts  chatlog.ts  chatmessage.ts
frontend/src/scripts/entity/: alien.js  alien.ts  base.js  base.ts  bullet.js  bullet.ts  player.js  player.ts
frontend/src/scripts/game/: collisionManager.js  collisionManager.ts  fpsmanager.js  game.js  game.ts
frontend/src/scripts/user/: user.ts
frontend/src/styles/: styles.css
sbnext/.next/server/: server-reference-manifest.json
sveltblazers/: Dockerfile  package.json  sb-theme.ts  session.ts  tailwind.config.ts  tsconfig.json  types.d.ts  vite.config.ts
sveltblazers/src/: app.html  constants.ts  hooks.server.ts  load.svelte  page.tsx  tailwind_presets.ts
sveltblazers/src/auth/: session.ts
sveltblazers/src/hooks/: withJwt.ts
sveltblazers/src/lib/: dev_console.ts  index.html  types.ts  websocketmanager.ts
sveltblazers/src/lib/assets/: color.ts
sveltblazers/src/lib/chat/: chatbox.ts  chatinput.ts  chatlog.ts  chatmessage.ts
sveltblazers/src/lib/components/: ChatBox.svelte  ChatInput.svelte
sveltblazers/src/lib/entity/: alien.ts  base.ts  bullet.ts  entity_index.ts  player.ts  shooter.ts  slowStraightShootingAlien.ts
sveltblazers/src/lib/game/: collisionManager.ts  fpsmanager.ts  game.ts
sveltblazers/src/lib/menu/: SomeoneElsesLobby.ts  base.ts  currentPlayerOwnLobby.ts  joinLobbyMenu.ts  main.ts  menuConstants.ts  multiplayer.ts  navigator.ts  settings.ts
sveltblazers/src/lib/styles/: styles.css
sveltblazers/src/lib/system/: debug_manager.ts  entity_manager.ts  game_state_manager.ts  input_handler.ts  spawn_handler.ts
sveltblazers/src/lib/user/: user.ts
sveltblazers/src/routes/: +layout.svelte  +page.svelte  helpers.ts
sveltblazers/src/routes/account/: +page.svelte
sveltblazers/src/routes/game/: +page.svelte  ChatBox.svelte  ChatInput.svelte  ChatLog.svelte
sveltblazers/src/routes/login/: +page.svelte  loginForm.svelte  registerForm.svelte
sveltblazers/src/store/: auth.ts  chat.ts
(+8 files in other folders)
